# sc2024-programming-solutions

./: .gitignore  README.md
c/: Makefile
c/include/: aes.h  bit_pack.hpp  cu_tc05.hpp  intrinsics.h  rand.h  ranges.hpp  span_utils.hpp  string_utils.h  string_utils.hpp  tc05.hpp  utils.h
c/include/fq/: fq.h  fq_mat.h  fq_mat_types.h  fq_poly.h  fq_poly_types.h  fq_types.h  fq_vec.h  fq_vec_types.h
c/include/zp/: zp.h  zp_mat.h  zp_mat_types.h  zp_poly.h  zp_poly_types.h  zp_types.h  zp_vec.h  zp_vec_types.h
c/res/: tc05_data_8r.txt  tc05_data_9r.txt
c/src/: aes.c  aes_encrypt.c  binary_xor.c  check_irred.c  circulant_mul.c  cu_tc05.cu  dif_tc00.cpp  find_inverse.c  fq_pow.c  ideal_cipher.cpp  ideal_poker.c  inner_prod.c  inv_table.c  lin_approx.txt  lin_tc00.cpp  mod_pow.c  multicollision.cpp  poly_mul.c  rand.cpp  tc05.cpp  tc05_lin_atk.cpp  test.c  test.cpp  test.py  test2.py  test_aes_sbox.c
c/src/fq/: fq.c  fq_mat.c  fq_poly.c  fq_vec.c
c/src/zp/: zp.c  zp_mat.c  zp_poly.c  zp_vec.c
python/: ddt.py
rust/: Cargo.toml
rust/src/: circulant_mul.rs  find_inverse.rs  fq_pow.rs  inner_prod.rs  mod_pow.rs  poly_mul.rs  test.rs
rust/src/ff/: field.rs  matrix.rs  mod.rs  poly.rs  rfq.rs  rzp.rs  vector.rs
